logs/irpf90.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/irpf90-1.6.9.egg-info'...
Listing './lib/python3.5/site-packages/irpf90_libs'...
Compiling './lib/python3.5/site-packages/irpf90_libs/command_line.py'...
***   File "./lib/python3.5/site-packages/irpf90_libs/command_line.py", line 79
    print "Error: -I option needs a directory"
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/irpf90_libs/error.py'...
***   File "./lib/python3.5/site-packages/irpf90_libs/error.py", line 38
    print """
Error:
-----
"""
             
      
     
  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/irpf90_libs/init.py'...
***   File "./lib/python3.5/site-packages/irpf90_libs/init.py", line 70
    print dir,'not in dir'
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/irpf90_libs/irpf90.py'...
***   File "./lib/python3.5/site-packages/irpf90_libs/irpf90.py", line 50
    print version
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/irpf90_libs/irpf90_indent.py'...
***   File "./lib/python3.5/site-packages/irpf90_libs/irpf90_indent.py", line 172
    print k+2*tab+self.format_continuation(line,k+2*tab)
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/irpf90_libs/irpman.py'...
***   File "./lib/python3.5/site-packages/irpf90_libs/irpman.py", line 35
    print "%s does not exist"%(sys.argv[1])
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/irpf90_libs/module.py'...
***   File "./lib/python3.5/site-packages/irpf90_libs/module.py", line 225
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/irpf90_libs/ninja_old.py'...
***   File "./lib/python3.5/site-packages/irpf90_libs/ninja_old.py", line 60
    print '\n'.join(t)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/irpf90_libs/parsed_text.py'...
***   File "./lib/python3.5/site-packages/irpf90_libs/parsed_text.py", line 159
    print v, variables[v].same_as
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/irpf90_libs/preprocessed_text.py'...
***   File "./lib/python3.5/site-packages/irpf90_libs/preprocessed_text.py", line 684
    print txt
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/irpf90_libs/subroutine.py'...
***   File "./lib/python3.5/site-packages/irpf90_libs/subroutine.py", line 130
    print map(lambda x: variables[x].needs, subroutines['full_ci'].needs)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/irpf90_libs/subroutines.py'...
***   File "./lib/python3.5/site-packages/irpf90_libs/subroutines.py", line 72
    print v
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/irpf90_libs/util.py'...
***   File "./lib/python3.5/site-packages/irpf90_libs/util.py", line 186
    print "10",dimsize("10") #-> "10"
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/irpf90_libs/variable.py'...
***   File "./lib/python3.5/site-packages/irpf90_libs/variable.py", line 690
    print "%s -> %s"%( x.name, i )
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/irpf90_libs/variables.py'...
***   File "./lib/python3.5/site-packages/irpf90_libs/variables.py", line 86
    print v
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
